fixed total alignment by adding flex to column

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,15 @@
+.billing-fee-col {
+  align-content: flex-end !important;
+  text-align: right !important;
+  align-items: flex-end !important;
+  text-align-last: right !important;
+}
+
+.billing-fee-label {
+  text-align-last: right !important;
+  text-align: right !important;
+}
+
 body {
   height: 100vh;
   margin: 0;
